# tmdb2seer

./: .gitignore  Cargo.toml  README.md  build.rs
config/: default.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: cache.rs  client.rs  handlers.rs  jellyseerr.rs  middleware.rs  omdb.rs  rate_limiter.rs  tasks.rs  tmdb.rs
src/config/: settings.rs  setup.rs
src/security/: csrf.rs  deserialize.rs  headers.rs
src/utils/: serde.rs
static/css/: main.css  table.css
static/css/base/: _reset.css  _typography.css  _variables.css
static/css/components/: _buttons.css  _cards.css  _notifications.css  _ratings.css  _refresh.css  _season-selector.css
static/css/layout/: _container.css  _grid.css
static/css/utils/: _animations.css  _media-queries.css
static/js/: api.js  app.js  main.js
static/js/components/: refresh.js
static/js/modules/: API.js  NotificationManager.js  ReleaseManager.js
templates/: base.html  index.html
