[package]
name = "tmdb2seer"
version = "0.2.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
cors = "0.1.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "1.2.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
secrecy = "0.8"
thiserror = "1.0"
config = { version = "0.15.6", features = ["toml"] }
base64 = "0.22.1"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true

# Add this section
[package.metadata.askama]
template_dir = "templates"
